# tempestcore

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  README  THANKS  ToDO.txt  revision.h.in.cmake
sql/: CMakeLists.txt
sql/create/: CMakeLists.txt  create_mysql.sql  drop_mysql.sql
sql/updates/: #1510_Vault_Of_Archavon.sql  #1789_Procedures.sql  #1962_the_Crusader`s_Coliseum.sql  #2045_The_Ruby_Sanctum.sql  #2421_Naxxramas.sql  #2465_Wintergrasp_Characters.sql  #2465_Wintergrasp_World.sql  #2506_StartUP_Errors_Fixes.sql  #2686_the_Nexus.sql  #2700_Onyxia_Lair.sql  #2716_the_Icecrown_Citadel.sql  #2751_the_Ulduar.sql  #2777_Isle_Of_Conquest.sql  #2881_trial_of_the_champion.sql  #2902_world_argenttournament.sql  #2962_Myth_Fixes.sql  2730_trinity_10084_characters.sql  2828_trinity_10113_world.sql  3011_world_creature_template.sql  CMakeLists.txt
sql/updates/full/: CMakeLists.txt  update_auth.sql  update_characters.sql  update_world.sql
sql/updates/trinity_old/: 1100_trinity_9578_world.sql  1200_trinity_9607_world.sql  1275_trinity_9632_characters.sql  1300_trinity_9669_world.sql  1400_trinity_9743_world.sql  1450_trinity_9668_characters.sql  1500_trinity_9716_characters.sql  1600_trinity_9758_characters.sql  1600_trinity_9760_world.sql  1700_trinity_9792_characters.sql  1841_trinity_9845_world.sql  1896_trinity_9856_characters.sql  2064_trinity_9920_characters.sql  2170_trinity_9979_world.sql  2231_trinity_10000_characters.sql  2271_trinity_10029_world.sql  2276_trinity_10030_characters.sql  340_trinity_8972_characters.sql  353_trinity_8986_characters.sql  (+12 more)
(+6598 files in other folders)
